# trashbuddy-API

./: .env  .gitignore  Cargo.toml  Procfile  README.md  RustConfig  css  dbexport.pgsql  package-lock.json  package.json  webpack.config.js
.sass-cache/876df576ce4ed6aa5dc0debe65458b7c2fb7ec62/: _alert.scssc  _background-variant.scssc  _badge.scssc  _border-radius.scssc  _box-shadow.scssc  _breakpoints.scssc  _buttons.scssc  _caret.scssc  _clearfix.scssc  _float.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hover.scssc  _image.scssc  _list-group.scssc  _lists.scssc  _nav-divider.scssc  _pagination.scssc  _reset-text.scssc  _resize.scssc  _screen-reader.scssc  _size.scssc  _table-row.scssc  _text-emphasis.scssc  _text-hide.scssc  _text-truncate.scssc  _transition.scssc  _visibility.scssc
.sass-cache/8cf399e57ef19d0e5aacb33c0bb422266ba18ace/: SignIn.scssc
.sass-cache/95177ecdc8ff274adebeb343726380ba5caad613/: _functions.scssc  _grid.scssc  _mixins.scssc  _reboot.scssc  _variables.scssc  bootstrap-grid.scssc  bootstrap-reboot.scssc  bootstrap.scssc
.sass-cache/f1dd1f1595a87914a99402fb12cf6a5084ebf2c2/: _display.scssc  _flex.scssc
client_app/: package.json  webpack.config.js
client_app/config/: webpack.config.dev.js
client_app/src/: App.js
client_app/src/css/: Home.css  MyAd.css  (+18 more)
default_data_db/: copy_syntax.pg  districts.csv  districts.pg  plastic_category.pg  provinces.csv  provinces.pg  sub_districts.csv
migrations/2018-04-18-152146_mb_api/: down.sql  up.sql
migrations/2018-04-20-162020_majesticapp_api/: districts.sql  down.sql  up.sql
src/: _db.rs  _supplier.rs  customer.rs  main.rs  schema.rs  signin_log.rs  style  supplier.rs  transaction.rs
src/areas_module/: area.rs  area.rs.tmp  mod.rs  read_all_areas.sql
src/category_of_trash_module/: category_of_trash.rs  mod.rs
src/crypto_module/: mod.rs
src/database/: db_setting.rs  schema.rs
src/error_handler_module/: mod.rs
src/package_of_supplier_module/: mod.rs  package_of_supplier.rs
src/partner_module/: mod.rs  partner.rs
src/partner_review_module/: mod.rs  partner_review.rs
src/report_to_block_module/: mod.rs  report_to_block.rs
src/signin_log_module/: mod.rs  signin_log.rs
src/signin_module/: mod.rs  signin_log.rs
src/supplier_module/: mod.rs  supplier.rs
src/supplier_review_module/: mod.rs  supplier_review.rs
src/transaction_module/: mod.rs  transaction.rs
static/: index.html
(+70 files in other folders)
