[package]
name = "majesticapp_api"
version = "0.0.1"
authors = ["tandry syawaludin"]

[dependencies]
rocket = "0.3.7"
rocket_codegen = "0.3.7"
rocket_contrib = "0.3.7"
dotenv_codegen = "0.11.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }