[package]
name = "trashbuddy"
version = "0.0.1"
authors = ["tandry syawaludin"]

[dependencies]
rocket = "0.3.7"
rocket_codegen = "0.3.7"
rocket_contrib = "0.3.7"
dotenv_codegen = "0.11.0"
serde_json = "1.0"
frank_jwt = "*"
regex = "1"
serde_derive = "1.0"
serde = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }

jwt = "*"
hyper = "*"
rust-crypto = "*"
nickel = "*"

[development]
address = "localhost"
port = 8000
workers = 10
log = "normal"
secret_key = "7rV/SBmxl6VVBknASqYSrpo4z258B3rGobift+E1aK8="
limits = { forms = 32768 }

[staging]
address = "0.0.0.0"
port = 80
workers = 10
log = "normal"
secret_key = "7rV/SBmxl6VVBknASqYSrpo4z258B3rGobift+E1aK8="
limits = { forms = 32768 }

[production]
address = "0.0.0.0"
port = 80
workers = 10
log = "critical"
secret_key = "7rV/SBmxl6VVBknASqYSrpo4z258B3rGobift+E1aK8="
limits = { forms = 32768 }