[package]
name = "trashbuddy"
version = "0.0.1"
authors = ["tandry syawaludin"]

[dependencies]
cargo-tree = "0.19.0"
rocket = "0.3.7"
rocket_codegen = "0.3.7"
rocket_contrib = "0.3.7"
rocket_cors = "0.3.0"
dotenv_codegen = "0.11.0"
serde_json = "1.0"
frank_jwt = "*"
regex = "1"
serde_derive = "1.0"
serde = "1.0"
djangohashers = "0.3.1"
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "chrono"] }

[development]
address = "localhost"
port = 8000
workers = 10
log = "normal"
secret_key = "8Xui8SN4mI+7egV/9dlfYYLGQJeEx4+nnn="
limits = { forms = 32768 }

[staging]
address = "0.0.0.0"
port = 80
workers = 10
log = "normal"
secret_key = "8Xui8SN4mI+7egV/9dlfYYLGQJeEx4+DwmSQLwDVaag="
limits = { forms = 32768 }

[production]
address = "0.0.0.0"
port = 80
workers = 10
keep_alive = 5
log = "critical"
secret_key = "8Xui8SN4mI+7egV/9dlfYYLGQJeEx4+DwmSQLwDVaag="
limits = { forms = 32768 }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
